[gd_scene load_steps=2 format=2]

[ext_resource path="res://game/enemies/GrowthEnemy.gd" type="Script" id=1]

[node name="GrowthEnemy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource( 1 )

[node name="Body" type="CollisionShape2D" parent="."]

[node name="CoolDown" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="SpriteAnimator" type="AnimatedSprite" parent="."]

[node name="Detector" type="Area2D" parent="."]
modulate = Color( 1, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
collision_layer = 0
collision_mask = 0

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="CoolDown" to="." method="_on_CoolDown_timeout"]
[connection signal="body_entered" from="Detector" to="." method="_on_Detector_body_entered"]
